tests/toy/neg/001423_mutation.toylang
program a = { var a : a bool; } .
